--- a/Source/SSWeb/src/main/webapp/resources/css/style-resp.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-resp.css
@@ -491,6 +491,7 @@
     }
     .overlay-payment{
         padding-bottom: 300px;
+        overflow: auto;
     }
     .btn-payment{
         width: 100%;
